# VEDA_FinalProject

./: FaceInfo_receive.cpp  PasswordCheck_send.c  README.md  motor.cpp
.github/: dependabot.yml  pull_request_template.md
Client/RSP5(Buzzer)/: buzzer  main.cpp  makefile
Client/RSP5(Buzzer)/inc/: CANCommunicationManager.h  Configure.h  LEDController.h  SoundManager.h
Client/RSP5(Buzzer)/src/: CANCommunicationManager.cpp  LEDController.cpp  SoundManager.cpp  switch-handler.cpp
Client/RSP5(Keypad)/: KeypadModule.cpp  Makefile
Client/RSP5(Keypad)/Independent Function/: PasswordCheck_send.cpp
Client/RSP5(Motor)/: Makefile  motor.cpp
Client/RSP5(Motor)/include/: CANController.h  Constants.h  DoorLockController.h  Motor.h
Client/RSP5(Motor)/src/: CANController.cpp  DoorLockController.cpp  Motor.cpp  main.cpp
ISSUE_TEMPLATE/: 이슈-생성-📝.md
Integrated/: KeypadModule.cpp
RSP5(Buzzer)/: main.cpp
Server/face-recognition/: .gitignore  CMakeLists.txt  QLed.py  build.sh  face_recognition.cpp  face_recognition.h  face_recognition.qrc  face_recognition.ui  face_recognition_server.pyproject  face_recognition_ui.py  main.cpp  server.py  ui_face_recognition.py
